product page template

--- a/public/app/partials/products/view.html
+++ b/public/app/partials/products/view.html
@@ -30,16 +30,119 @@
 				</div>
 				<div class="productview-storeinfo"> 
 					<a href="#">
-						<img src="/temp/carthtml/images/1.jpg"> 
+						<img src="/assets/images/avatar.jpg"> 
 						<strong>CoolStore101</strong>
-						<span>This is the store tagline</span>
+						<span>This is the store tagline with long tagline ofcourse</span>
 					</a>
 				</div>
-				<div class="productview-related"> 
-					related products
+				<div class="productview-related mb20"> 
+					<h5 class="m0 pad20">Related Products</h5>
+					<div class="productview-related-item">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/bags/4.jpg">
+							<span class="productview-related-name">This is a very cool productThis is a very cool product</span>
+							<span class="productview-related-meta clearfix show">
+								0 Reviews
+								<span class="pull-right">Php 1,000.00</span>
+							</span>
+						</a>
+					</div>
+					<div class="productview-related-item">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/bags/4.jpg">
+							<span class="productview-related-name">This is a very cool productThis is a very cool product</span>
+							<span class="productview-related-meta clearfix show">
+								0 Reviews
+								<span class="pull-right">Php 1,000.00</span>
+							</span>
+						</a>
+					</div>
+					<div class="productview-related-item">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/bags/4.jpg">
+							<span class="productview-related-name">This is a very cool productThis is a very cool product</span>
+							<span class="productview-related-meta clearfix show">
+								0 Reviews
+								<span class="pull-right">Php 1,000.00</span>
+							</span>
+						</a>
+					</div>
+					<div class="productview-related-item">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/bags/4.jpg">
+							<span class="productview-related-name">This is a very cool productThis is a very cool product</span>
+							<span class="productview-related-meta clearfix show">
+								0 Reviews
+								<span class="pull-right">Php 1,000.00</span>
+							</span>
+						</a>
+					</div>
+					<div class="productview-related-item text-center">
+						<a href="#" class="pad10"><strong>Read All</strong></a>
+					</div>
 				</div>
-				<div class="productview-reviews"> 
-					review
+				<div class="productview-reviews mb20"> 
+					<h5 class="m0 clearfix pad20">
+						Reviews (30)
+						<span class="product-reviews-star pull-right">
+							<i class="fa fa-star text-danger"></i>
+							<i class="fa fa-star text-danger"></i>
+							<i class="fa fa-star text-danger"></i>
+							<i class="fa fa-star text-danger"></i>
+							<i class="fa fa-star text-default"></i>
+						</span>
+					</h5>
+					<div class="productview-reviews-item"> 
+						<div class="product-review-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ut, a </div>
+						<div class="product-review-head">
+							<img src="/assets/images/avatar.jpg">
+							<div class="productview-reviews-name clearfix">
+								by <a href="#">Koko M.</a>
+								<span class="product-reviews-star pull-right">
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-default"></i>
+								</span>
+							</div>
+						</div>  
+					</div>
+					<div class="productview-reviews-item"> 
+						<div class="product-review-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ut, a </div>
+						<div class="product-review-head">
+							<img src="/assets/images/avatar.jpg">
+							<div class="productview-reviews-name clearfix">
+								by <a href="#">Koko M.</a>
+								<span class="product-reviews-star pull-right">
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-default"></i>
+								</span>
+							</div>
+						</div>  
+					</div>
+					<div class="productview-reviews-item"> 
+						<div class="product-review-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ut, a </div>
+						<div class="product-review-head">
+							<img src="/assets/images/avatar.jpg">
+							<div class="productview-reviews-name clearfix">
+								by <a href="#">Koko M.</a>
+								<span class="product-reviews-star pull-right">
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-danger"></i>
+									<i class="fa fa-star text-default"></i>
+								</span>
+							</div>
+						</div>  
+					</div>
+					<div class="productview-reviews-item text-center">
+						<a href="#" class="pad10"><strong>Read All</strong></a>
+					</div>
 				</div>
 			</div>
 		</div>
