upload store avatar, populate store template

--- a/public/app/partials/my/wishlist.html
+++ b/public/app/partials/my/wishlist.html
@@ -12,7 +12,7 @@
 							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a class="gray-text" href="/s/1">Store 123</a>
+							<a class="gray-text" href="/@coolstore">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -29,7 +29,7 @@
 							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a class="gray-text" href="/s/1">Store 123</a>
+							<a class="gray-text" href="/@coolstore">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -46,7 +46,7 @@
 							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a class="gray-text" href="/s/1">Store 123</a>
+							<a class="gray-text" href="/@coolstore">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -63,7 +63,7 @@
 							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a class="gray-text" href="/s/1">Store 123</a>
+							<a class="gray-text" href="/@coolstore">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -80,7 +80,7 @@
 							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a class="gray-text" href="/s/1">Store 123</a>
+							<a class="gray-text" href="/@coolstore">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
