--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,6 +30,7 @@ html(ng-app='starterApp')
         script(src='/app/services/categoryService.js')
         script(src='/app/services/productService.js')
         script(src='/app/services/settingService.js')
+        script(src='/app/services/storeService.js')
         script(src='/app/controllers/mainController.js')
         script(src='/app/controllers/homeController.js')
         script(src='/app/controllers/authController.js') 
