--- a/public/app/partials/stores/view.html
+++ b/public/app/partials/stores/view.html
@@ -1,5 +1,5 @@
 <div class="page-wrap">
-	<div class="page-body">
+	<div class="page-body" ng-if="objStore">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="profileBox">
@@ -179,5 +179,13 @@
 					</div>
 				</div> 
 			</div>
+	</div>
+
+	<div class="page-body" ng-if="!objStore">
+		<div class="row">
+			<div class="col-md-12">
+				<h4 class="text-center whitebox">Page not found.</h4>
+			</div>
+		</div>
 	</div>
 </div>
