add storeproducts api

--- a/public/app/partials/stores/view.html
+++ b/public/app/partials/stores/view.html
@@ -18,74 +18,14 @@
 			</div>
 		</div>
 		<div class="row"> 
-				<div class="col-md-3 col-sm-4">
+				<div class="col-md-3 col-sm-4" ng-repeat="strProd in objStoreProducts">
 					<div class="product-card product-card-cool product-card-cool-sm"> 
 						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<span class="product-name">{{strProd.name}}</span>
 							<img src="/temp/carthtml/images/bags/4.jpg">
 						</a>
 						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/5.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/6.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/7.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
+							<div class="product-price">PHP <span>{{strProd.price}}</span></div>
 							<a class="product-view">
 								<i class="glyphicon glyphicon-share-alt"></i> View
 							</a>
@@ -98,86 +38,6 @@
 						</div> 
 					</div>
 				</div>  
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/5.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/6.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/7.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-3 col-sm-4">
-					<div class="product-card product-card-cool product-card-cool-sm"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/8.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
 			</div>
 	</div>
 
