--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,6 +19,7 @@ html(ng-app='starterApp')
         script(src='/assets/javascript/angular-route.js')
         script(src='/assets/javascript/angular-resource.js')
         script(src='/assets/javascript/angular-animate.js')
+        script(src='/assets/javascript/angular-sanitize.min.js')
         script(src='/assets/javascript/ng-tags-input.min.js')
         script(src='/assets/javascript/angular-chosen.min.js')
         script(src='/assets/javascript/textAngular-rangy.min.js')
