display number of followers

--- a/public/app/partials/stores/view.html
+++ b/public/app/partials/stores/view.html
@@ -11,7 +11,7 @@
 						<ul class="profileBox-meta mt20">
 							<li>Products : 57</li>
 							<li>Reviews : 57</li>
-							<li>Followers : 570</li>
+							<li>Followers : {{objStore.followers.length}}</li>
 							<li class="pull-right m0" ng-if="!isfollowed">
 								<a href="#" class="btn btn-xs btn-primary" ng-click="followStore($event)">
 									<i class="glyphicon glyphicon-plus"></i> Follow</a>
