--- a/public/app/partials/products/view.html
+++ b/public/app/partials/products/view.html
@@ -20,7 +20,9 @@
 						<input type="number" min="1" value="1" class="form-control text-center">
 						<span class="input-group-addon">x Php <strong>{{objProduct.price}}</strong></span>
 					</div>
-					<input type="submit" value="Add to Cart" class="btn btn-primary btn-block">
+					<input type="submit" value="Add to Cart" class="btn btn-primary btn-block mb10">
+					<p class="text-center m0 mb10">or</p>
+					<p class="m0"><a href="#" class="btn btn-xs btn-block btn-default" ng-click="$parent.addToWishlist(objProduct._id)">Add to Wishist</a></p>
 				</div>
 				<div class="productview-storeinfo"> 
 					<a href="/@{{objStore.url}}">
